完成弹出框

--- a/留言墙开发文档.md
+++ b/留言墙开发文档.md
@@ -160,7 +160,7 @@ import "@/assets/fonts/iconfont.js"
 #### 引入mock
 
 ```bash
-yarn add 
+yarn add mock
 ```
 
 
@@ -177,12 +177,18 @@ yarn add
 #### 性能优化
 
 1. 列表点击的事件委托
+1. add 按钮的变换优化 P13
 
 #### 没做的内容
 
 1. 字体 P10-16:33
+1. 弹出框的动画 P14 14min
 
+#### 没懂的
 
+- 关于宽度？HTML的宽度，body的宽度以及视口的宽度 P14 7:26
+
+- 过渡的效果：transition: @tr; P17 15:42
 
 # 项目Tips
 
