--- a/留言墙开发文档.md
+++ b/留言墙开发文档.md
@@ -190,6 +190,10 @@ yarn add mock
 
 - 过渡的效果：transition: @tr; P17 15:42
 
+- img 标签中 使用src属性进行插入内容， 结合Vue的模板语法
+
+- transition放在哪儿
+
 # 项目Tips
 
 ### 第三方库
